# rusty_mining

./: .gitignore  Cargo.toml  README.md  example_config.json
src/: lib.rs  main.rs
src/mining/: cmd_args.rs  config.rs  mod.rs  profile.rs
src/mining/config/: mod.rs
